--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".main.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- FrameLayout utama -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="2000px"
+        android:src="@drawable/main_background"
+        android:translationY="160dp"
+        android:alpha="0.2"
+        >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </ImageView>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="2000px"
+        android:src="@drawable/main_background"
+        android:translationY="-249.5dp"
+        android:rotation="180"
+        android:alpha="0.2">
+    </ImageView>
+
+    <FrameLayout
+        android:id="@+id/frame1"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:background="#FF9800">
+
+        <!-- RelativeLayout untuk mengatur tata letak -->
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:padding="30dp">
+
+
+            <!-- TextView di dalam RelativeLayout -->
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="What's the recipe for today?"
+                android:textColor="@color/white"
+                android:textSize="23sp"
+                android:textStyle="bold"
+                android:translationY="45px" />
+
+            <!-- Button di bawah TextView di dalam RelativeLayout -->
+
+            <!-- EditText di dalam RelativeLayout -->
+
+            <EditText
+                android:drawablePadding="8dp"
+                android:padding="10dp"
+                android:background="@drawable/custom_edittext"
+                android:id="@+id/edUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableRight="@drawable/ic_search"
+                android:hint="Search"
+                android:translationY="65dp"
+                />
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/profile_icon"
+                android:translationX="320dp"
+                android:translationY="2dp"
+                >
+
+            </ImageView>
+        </RelativeLayout>
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:padding="30dp"
+        android:backgroundTint="#FD9700"
+        android:translationY="200dp"
+        />
+</RelativeLayout>
+
+
+
