--- a/app/src/main/res/menu/buttom_menu.xml
+++ b/app/src/main/res/menu/buttom_menu.xml
@@ -3,28 +3,25 @@
 
     <item
         android:id="@+id/home"
-        android:title="Home"
+        android:title="List"
         android:icon="@drawable/ic_list"/>
 
     <item
         android:id="@+id/shorts"
-        android:title="Shorts"
+        android:title="Filters"
         android:icon="@drawable/ic_filter"/>
 
-    <item
-        android:id="@+id/fab"
-        android:title=""
-        android:enabled="false"/>
-
-    <item
-        android:id="@+id/subscriptions"
-        android:title="Subscriptions"
-        android:icon="@drawable/ic_bookmark"/>
 
     <item
         android:id="@+id/library"
-        android:title="Library"
+        android:title="Home"
         android:icon="@drawable/ic_home"/>
+    <item
+        android:id="@+id/subscriptions"
+        android:title="Bookmark"
+        android:icon="@drawable/ic_bookmark"/>
+
+
 
     <item
         android:id="@+id/profile"
