--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -2,27 +2,24 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backroundstart">
+    android:background="@drawable/backroundstart"
+    android:id="@+id/main"> <!-- Tambahkan ID di sini -->
 
     <!-- Gambar makanan -->
 
     <!-- Teks Judul -->
-
-    <!-- Teks Subtitle -->
-
-    <!-- Tombol Start -->
-
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:translationY="560dp"
+        android:translationY="560dp"
         android:translationX="25dp"
         android:fontFamily="sans-serif-medium"
         android:text="It's cooking time"
         android:textColor="@android:color/holo_orange_light"
         android:textSize="24sp" />
 
+    <!-- Teks Subtitle -->
     <TextView
         android:id="@+id/text_subtitle"
         android:layout_width="wrap_content"
@@ -30,13 +27,13 @@
         android:layout_below="@id/text_title"
         android:translationY="505dp"
         android:translationX="25dp"
-
         android:layout_marginEnd="105dp"
         android:fontFamily="arial"
         android:text="What do you want to cook today?"
         android:textColor="@android:color/holo_orange_light"
         android:textSize="18sp" />
 
+    <!-- Tombol Start -->
     <Button
         android:id="@+id/button_start"
         android:layout_width="120dp"
@@ -48,5 +45,4 @@
         android:text="STARTED"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
-
 </RelativeLayout>
