--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
-    <!-- Background Image -->
+    <!-- Wrapper RelativeLayout -->
+    <RelativeLayout
+        android:id="@+id/main"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -130,6 +138,7 @@
 
                     <!-- Button -->
                     <Button
+                        android:id="@+id/btnCekResepSalad"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Cek Resep"
@@ -327,6 +336,6 @@
 
 
 
-
-</RelativeLayout>
+    </RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
