--- a/app/src/main/res/layout/filter_bahan.xml
+++ b/app/src/main/res/layout/filter_bahan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="MenuMain">
+    tools:context=".main.MainActivity">
 
     <!-- Header Section -->
     <LinearLayout
@@ -43,7 +43,7 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_search"
-                android:tint="@color/grey" />
+                android:tint="@color/cardview_light_background" />
 
             <EditText
                 android:id="@+id/searchInput"
