--- a/app/src/main/res/layout/activity_di_simpan.xml
+++ b/app/src/main/res/layout/activity_di_simpan.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
@@ -143,15 +143,13 @@
     </GridLayout>
 
     <!-- Bottom Navigation Bar -->
-    <LinearLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#FF5722"
-        android:orientation="horizontal"
-        android:weightSum="4">
-
-
-    </LinearLayout>
+        android:background="@android:color/holo_orange_dark"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/buttom_menu" />
 
 </RelativeLayout>
